--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,40 @@
- services:
-   postgres:
-     image: pgvector/pgvector:pg16
-     environment:
-       POSTGRES_DB: rag
-       POSTGRES_USER: rag
-       POSTGRES_PASSWORD: rag
-     ports:
-       - "5433:5432"
-     volumes:
-       - postgres_data:/var/lib/postgresql/data
- 
- volumes:
-   postgres_data:
+services:
+
+  postgres:
+    image: pgvector/pgvector:pg16
+    environment:
+      POSTGRES_DB: rag
+      POSTGRES_USER: rag
+      POSTGRES_PASSWORD: rag
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U rag -d rag" ]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    environment:
+      # Override DB host to use Docker service name instead of localhost
+      DATABASE_URL: postgresql+asyncpg://rag:rag@postgres:5432/rag
+    depends_on:
+      postgres:
+        condition: service_healthy
+    # Development override: enables hot-reload when source changes
+    # Remove the next 3 lines for a pure production setup
+    volumes:
+      - ./app:/app/app
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+
+volumes:
+  postgres_data:
