Security layer & Dashboard

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@
  LOG_LEVEL=INFO
  EMBEDDING_PROVIDER=openai
  OPENAI_API_KEY=your-openai-api-key-here
+# API Security Key
+API_KEY=your-api-key-here
 
  # Retrieval score threshold (cosine distance 0–2, lower = more similar)
  # Chunks with distance above this value are filtered out as irrelevant.
