--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=68.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "enterprise-rag"
 version = "0.1.0"
@@ -22,6 +26,10 @@ dependencies = [
   # #11 Local model provider (Ollama HTTP client)
   "httpx>=0.27",
 ]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["app*", "eval*"]
 
 [project.optional-dependencies]
 dev = [
